Added files from installation directory

--- a/ckanext/relation/templates/package/edit_base.html
+++ b/ckanext/relation/templates/package/edit_base.html
@@ -2,6 +2,6 @@
 
 {% block content_primary_nav %}
   {{ super() }}
-  {{ h.build_nav_icon('dataset_edit_relation', _('Edit Relationship'), id=pkg.name) }}
+  {{ h.build_nav_icon('dataset_edit_relation', 'Verknüpfungen bearbeiten', id=pkg.name) }}
 {% endblock %}
 
