--- a/ckanext/relation/templates/package/new_data_relation.html
+++ b/ckanext/relation/templates/package/new_data_relation.html
@@ -9,7 +9,7 @@
 {% block breadcrumb_content %}
   {{ super() }}
   {% if pkg %}
-    <li class="active"><a href="#">{{ _('Add New Reslationships') }}</a></li>
+    <li class="active"><a href="#">{{ 'Neue Verknüpfung hinzufügen' }}</a></li>
   {% endif %}
 {% endblock %}
 
