--- a/ckanext/relation/templates/package/edit_data_relation.html
+++ b/ckanext/relation/templates/package/edit_data_relation.html
@@ -10,7 +10,7 @@
 {% block breadcrumb_content %}
   {{ super() }}
   {% if res %}
-      <li{% block breadcrumb_edit_selected %} class="active"{% endblock %}><a href="">{{ _('Edit Relationship') }}</a></li>
+      <li{% block breadcrumb_edit_selected %} class="active"{% endblock %}><a href="">{{ 'Verknüpfungen bearbeiten' }}</a></li>
   {% endif %}
 {% endblock %}
 
