--- a/ckanext/relation/templates/package/read_base.html
+++ b/ckanext/relation/templates/package/read_base.html
@@ -7,7 +7,7 @@
 {% block content_primary_nav %}
   {{ h.build_nav_icon('dataset_read', _('Dataset'), id=pkg.name) }}
   {{ h.build_nav_icon('dataset_groups', _('Groups'), id=pkg.name) }}
-  {{ h.build_nav_icon('relation', _('Relationships'), id=pkg.name) }}
+  {{ h.build_nav_icon('relation', 'Verknüpfungen', id=pkg.name) }}
   {{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
 {% endblock %}
 
