--- a/ckanext/relation/templates/package/new_data_relation.html
+++ b/ckanext/relation/templates/package/new_data_relation.html
@@ -3,7 +3,7 @@
 
 {% set logged_in = true if c.userobj else false %}
 
-{% block subtitle %}{{ _('Add Relationships to the dataset') }}{% endblock %}
+{% block subtitle %}{{ _('Add Relationships to the resource') }}{% endblock %}
 
 {% block breadcrumb_content_selected %}{% endblock %}
 {% block breadcrumb_content %}
