--- a/ckanext/relation/templates/package/snippets/edit_form.html
+++ b/ckanext/relation/templates/package/snippets/edit_form.html
@@ -17,7 +17,7 @@
         <col width="45">
  	   <col width="25">
         <tr>
-          <th scope="col">{{ _('Dataset') }}</th>
+          <th scope="col">{{ _('Resource') }}</th>
           <th scope="col">{{ _('Organization') }}</th>
           <th scope="col"></th>
         </tr>
@@ -34,7 +34,7 @@
       </tbody>
     </table>
 	{% if not query_rel %}
-	<i> {{ _('This dataset has no references.') }}</i><ol></ol>
+	<i> {{ _('This resource has no references.') }}</i><ol></ol>
 	{% endif %}
    {% endblock %}
       
@@ -66,7 +66,7 @@
         <col width="45">
         <col width="25">
         <tr>
-          <th scope="col">{{ _('Dataset') }}</th>
+          <th scope="col">{{ _('Resource') }}</th>
           <th scope="col">{{ _('Organization') }}</th>
           <th scope="col"></th>
         </tr>
