--- a/ckanext/relation/templates/package/edit_base.html
+++ b/ckanext/relation/templates/package/edit_base.html
@@ -1,7 +1,6 @@
 {% ckan_extends %}
-
+{# {% set pkg = c.pkg %} #}
 {% block content_primary_nav %}
   {{ super() }}
-  {{ h.build_nav_icon('dataset_edit_relation', _('Edit Relationship'), id=pkg.name) }}
+  {{ h.build_nav_icon('relation.edit_relation', _('Edit Relationship'), id=pkg.name) }}
 {% endblock %}
-
