--- a/ckanext/relation/templates/package/read_base.html
+++ b/ckanext/relation/templates/package/read_base.html
@@ -2,13 +2,9 @@
 
 {% block subtitle %}{{ h.dataset_display_name(pkg) }} - {{ super() }}{% endblock %}
 
-
-
 {% block content_primary_nav %}
   {{ h.build_nav_icon('dataset_read', _('Dataset'), id=pkg.name) }}
   {{ h.build_nav_icon('dataset_groups', _('Groups'), id=pkg.name) }}
-  {{ h.build_nav_icon('relation', _('Relationships'), id=pkg.name) }}
+  {{ h.build_nav_icon('relation.relations', _('Relationships'), id=pkg.name) }}
   {{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
 {% endblock %}
-
-
