--- a/ckanext/relation/templates/package/snippets/marker.html
+++ b/ckanext/relation/templates/package/snippets/marker.html
@@ -1,12 +1,11 @@
 {% set package = package %} 
-{% set count = h.get_allowable_children_groups_g('main-categories') %}
-{% set main_group = h.get_selected_group(package.groups, 'main-categories') %}
+{# {% set count = h.get_allowable_children_groups_g('main-categories') %}
+{% set main_group = h.get_selected_group(package.groups, 'main-categories') %} #}
 
-{% resource 'relation/group_label.css' %}     
+{% set type = 'asset' if h.ckan_version().split('.')|map('int')|list >= [2, 9, 0] else 'resource' %}
+{% include 'snippets/relation_css_' ~ type ~ '.html' %}
 
 {% set group_color = namespace(color='') %}
-
-
 
 <ul class="dataset-markers inside">
 {% for main in main_group %}
@@ -44,7 +43,6 @@
 {% endfor %}
 
 </ul>
-
 
 {% macro col()%}
 {% set color = group_color.color %}
