--- a/ckanext/relation/templates/package/snippets/resource_form.html
+++ b/ckanext/relation/templates/package/snippets/resource_form.html
@@ -2,7 +2,7 @@
 
 {% set data = data or {} %}
 {% set errors = errors or {} %}
-{% set action = form_action or h.url_for(c.linkResource) %}
+{% set action = form_action %}
 
 <form id="resource-edit" class="dataset-form dataset-resource-form form-horizontal" method="post" action="{{ action }}" data-module="basic-form resource-form" enctype="multipart/form-data">
   {% block stages %}
@@ -63,10 +63,10 @@
   {% block buttons %}
     {% block delete_button %}
       {% if data.id %}
-        {% if h.check_access('resource_delete', {'id': data.id})  %}
+        {#{% if h.check_access('resource_delete', {'id': data.id})  %}
           {% set locale = h.dump_json({'content': _('Are you sure you want to delete this resource?')}) %}
           <a class="btn btn-danger pull-left" href="{% url_for controller='package', action='resource_delete', resource_id=data.id, id=pkg_name %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
-        {% endif %}
+        {% endif %} #}
       {% endif %}
     {% endblock %}
     {% if stage %}
